# AIPairProgramming-Python-Batch-2

./: .gitignore  .pre-commit-config.yaml  README.md  complexity_analysis.txt  fizzbuzz.py  mall_customer_analysis.py  number_algorithms.py  pima_knn_analysis.py  strings_algorithms.py  synthetic_data.py  test_book_bloom.py  test_fizzbuzz.py  test_mall_customer_analysis.py  test_number_algorithms.py  test_pima_knn_analysis.py  test_strings_algorithms.py  test_synthetic_data.py
book_bloom/: README.md  bookbloom_requirements.md  debug_test.html  main.py  run.py  start.sh
book_bloom/bookbloom/: main.py  pyproject.toml
book_bloom/bookbloom/backend/: auth.py  database.py  main.py  models.py
book_bloom/bookbloom/data/: bookbloom.db  clear_users.py
book_bloom/bookbloom/frontend/: index.html
book_bloom/bookbloom/scripts/: init_db.py
book_bloom/bookbloom/static/: app.js  styles.css
book_bloom/frontend/: app.js  index.html  style.css
book_commerce/BookBloom/backend/: main.py
log_analyzer/: README.md  app_logs.csv  functional requirement.md  log_analyzer.py
log_analyzer/tests/: test_log_analyzer.py
movie_recommender/: README.md  functional-requirements.md  movie_recommender.py  movies.csv  test_movie_recommender.py
